Further basic fixes and clean-up
Removed idea, nbproject folders
Removed aircompressor-0.7.jar; replaced w/gradle dependency
Added slf4j-simple logger
Fixed gradlew line sep
Removed WinRegistry.jar
Further Java clean-up throughout